# Nokia-PK-2025

.github/workflows/: ccpp.yml  clean_ccpp.yml
src/UE/: .gitignore
src/UE/Application/: Application.cpp  Application.hpp  CMakeLists.txt  Context.hpp  IEventsHandler.hpp  Sms.cpp  Sms.hpp  SmsDB.cpp  SmsDB.hpp
src/UE/Application/Ports/: BtsPort.cpp  BtsPort.hpp  IBtsPort.hpp  ITimerPort.hpp  IUserPort.hpp  TimerPort.cpp  TimerPort.hpp  UserPort.cpp  UserPort.hpp
src/UE/Application/States/: BaseState.cpp  BaseState.hpp  ConnectedState.cpp  ConnectedState.hpp  ConnectingState.cpp  ConnectingState.hpp  ConstructSmsState.cpp  ConstructSmsState.hpp  DialingState.cpp  DialingState.hpp  NotConnectedState.cpp  NotConnectedState.hpp  ReceivingCallState.cpp  ReceivingCallState.hpp  SendingSmsState.cpp  SendingSmsState.hpp  TalkingState.cpp  TalkingState.hpp  ViewingSmsListState.cpp  ViewingSmsListState.hpp  ViewingSmsState.cpp  ViewingSmsState.hpp  WaitingForCallAcceptState.cpp  WaitingForCallAcceptState.hpp
src/UE/Tests/Application/: ApplicationTestSuite.cpp
src/UE/Tests/Application/Mocks/: IBtsPortMock.hpp  ITimerPortMock.hpp  IUserPortMock.hpp
src/UE/Tests/Application/Ports/: BtsPortTestSuite.cpp  UserPortTestSuite.cpp
